--- a/README
+++ b/README
@@ -4,7 +4,7 @@ Author: Rishikesh Vaishnav
 Created: 30/03/2017
 
 Last Modified:
-Thu 30 Mar 2017 07:57:59 PM PDT
+Thu 30 Mar 2017 07:59:35 PM PDT
 
 Description:
     A python application where a user can draw a symbol representing an ASCII
@@ -30,3 +30,7 @@ Description:
     - On the following lines, the list of pixel values drawn on the screen, 
       represented as 0s (not drawn) and 1s (drawn), starting from the upper left
       corner and going from left to right and top to bottom.
+
+How to Run:
+    Navigate to this program's directory and run the program with:
+    $ python character_drawer.py
